--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,8 @@
     <!-- <script src="http://localhost:8080/remoteEntry.js"></script> -->
   </head>
 
-  <body>
+  <body class="theme-dark">
+    <!-- <body> -->
     <div id="app"></div>
   </body>
 </html>
